--- a/psalmist_frontend/package.json
+++ b/psalmist_frontend/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@tinymce/tinymce-react": "^3.12.6",
     "axios": "^0.21.1",
     "materialize-css": "^1.0.0",
     "moment": "^2.29.1",
