--- a/the-psalmist-server/package.json
+++ b/the-psalmist-server/package.json
@@ -10,9 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "bcryptjs": "^2.4.3",
+    "config": "^3.3.6",
+    "express": "^4.17.1",
+    "express-validator": "^6.12.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.12.13"
   },
   "devDependencies": {
+    "concurrently": "^6.2.0",
     "dotenv": "^10.0.0",
     "nodemon": "^2.0.7"
   }
